# wireviz-gui

./: .gitignore  pyproject.toml  readme.md  requirements.txt  setup.py  test_mate.py  todo.md  wireviz_gui.spec
docs/source/: logo.xcf
tests/: test_dialog_integration.py  test_image_export.py  test_issue_repro.py  test_menus.py
wireviz_gui/: __init__.py  __main__.py  _base.py  app.py  dialogs.py  examples.py  images.py  mating_dialog.py  menus.py  version.py
