[project]
name = "wireviz-gui"
version = "0.3.1"
readme = "readme.md"
requires-python = ">=3.14"
dependencies = [
    "click>=8.3.1",
    "graphviz>=0.21",
    "mypy>=1.19.1",
    "pillow>=12.1.0",
    "tk-tools>=0.17.0",
    "wireviz>=0.4.1",
]

[dependency-groups]
dev = [
    "pyinstaller>=6.18.0",
    "pytest>=9.0.2",
    "ruff>=0.14.13",
    "types-pyyaml>=6.0.12.20250915",
]
